# f2i

./: README.md  pyproject.toml
f2i/: __init__.py  __main__.py
f2i/classes/: color.py  namespace.py
f2i/cli/: __init__.py  arguments.py
f2i/cli/subparsers/: __init__.py  convert.py  reconvert.py
f2i/functions/: file_to_image.py  image_to_file.py
f2i/variables/: color.py
